--- a/style.css
+++ b/style.css
@@ -3,13 +3,40 @@
 }
 
 .gradient-vert {
-    background: linear-gradient(180deg, rgb(98, 107, 115) 0%, rgb(56, 62, 72) 100%)
+    background: linear-gradient(180deg, rgb(98, 107, 115) 0%, rgb(56, 62, 72) 100%);
 }
 
 .gradient-vert-dark {
-    background: linear-gradient(180deg, rgb(56, 62, 72) 50%, rgb(33, 33, 33) 100%)
+    background: linear-gradient(180deg, rgb(56, 62, 72) 50%, rgb(33, 33, 33) 100%);
 }
 
 .gradient-side-black {
-    background: linear-gradient(300deg, rgba(51,51,51,1) 0%, rgba(48,48,48,1) 33%, rgba(99,99,99,1) 100%)
+    background: linear-gradient(300deg, rgba(51,51,51,1) 0%, rgba(48,48,48,1) 33%, rgba(99,99,99,1) 100%);
+}
+
+.pic {
+    width: 100%;
+    height: auto;
+}
+
+.pic-lg {
+    max-width: 640px;
+    width: 100%;
+    height: auto;
+}
+
+.pic-md {
+    max-width: 480px;
+    width: 100%;
+    height: auto;
+}
+
+.pic-sm {
+    max-width: 240px;
+    width: 100%;
+    height: auto;
+}
+
+.jumbotron-sm {
+    max-width: 480px;
 }
