Create About Lens and Other Projects page

--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@
     background: linear-gradient(135deg, rgb(82, 92, 100) 0%, rgb(56, 62, 72) 100%);
 }
 
+.gradient-diag-light {
+    background: linear-gradient(135deg, rgb(160, 169, 177) 0%, rgb(110, 119, 127) 100%);
+}
+
+.gradient-diag-light-2 {
+    background: linear-gradient(135deg, rgb(110, 119, 127) 0%, rgb(82, 92, 100) 100%);
+}
+
 .gradient-diag-bright {
     background: linear-gradient(135deg, rgb(200, 209, 217) 0%, rgb(160, 169, 177) 100%);
 }
@@ -37,29 +45,99 @@
 
 .pic-lg {
     max-width: 640px;
+    min-width: 480px;
     width: 100%;
     height: auto;
 }
 
 .pic-md {
     max-width: 480px;
+    min-width: 240px;
     width: 100%;
     height: auto;
 }
 
 .pic-sm {
     max-width: 240px;
+    min-width: 0px;
     width: 100%;
     height: auto;
+}
+
+.pic-lg-h {
+    max-width: 640px;
+    min-width: 480px;
+    width: auto;
+    height: 100%;
+}
+
+.pic-md-h {
+    max-width: 480px;
+    min-width: 240px;
+    width: auto;
+    height: 100%;
+}
+
+.pic-sm-h {
+    max-height: 240px;
+    min-width: 0px;
+    width: auto;
+    height: 100%;
 }
 
 .jumbotron-sm {
     max-width: 480px;
 }
 
+.w-nomin {
+    min-width: 0px;
+}
+
 @media only screen and (max-width: 767px) {
     h1 {
         font-size: 2rem;
+    }
+
+    .pic-lg {
+        max-width: 480px;
+        min-width: 240px;
+        width: 100%;
+        height: auto;
+    }
+
+    .pic-md {
+        max-width: 360px;
+        min-width: 120px;
+        width: 100%;
+        height: auto;
+    }
+
+    .pic-sm {
+        max-width: 240px;
+        min-width: 0px;
+        width: 100%;
+        height: auto;
+    }
+
+    .pic-lg-h {
+        max-width: 480px;
+        min-width: 240px;
+        width: 100%;
+        height: auto;
+    }
+
+    .pic-md-h {
+        max-width: 360px;
+        min-width: 120px;
+        width: 100%;
+        height: auto;
+    }
+
+    .pic-sm-h {
+        max-height: 240px;
+        min-width: 0px;
+        width: 100%;
+        height: auto;
     }
 }
 
